@@ -16,6 +16,8 @@ hildon-home (0.3.13~unreleased) unstable; urgency=low
         * Fix Potential crash in hd-system-notifications.c (progress bar
           pulsing). Fixes: NB#102472
         * Optimize image handling in bookmark shortcuts. Fixes: NB#102307
+        * Do not allow to uncheck all active views. Fixes: NB#102427
+
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 11 Feb 2009 09:19:38 +0200
 
